--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -224,22 +224,22 @@
     outline: none;
 }
 
-.sorting-select {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-
 .sort-direction {
+    font-weight: bold;
+    font-family: monospace;
+    padding: 10px 15px;
+    color: #45a049;
+    background-color: white;
+    border: none;
+    border-radius: 12px;
     cursor: pointer;
-    font-size: 1.2rem;
-    color: #4CAF50;
-    transition: color 0.3s ease, transform 0.3s ease;
+    transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 .sort-direction:hover {
-    color: #45a049;
-    transform: scale(1.2);
+    color: white;
+    background-color: #45a049;
+    transform: scale(1.1);
 }
 
 .error-block {
@@ -252,4 +252,8 @@
     font-size: 14px;
     text-align: center;
     box-shadow: 0px 5px 15px rgba(217, 83, 79, 0.2);
+}
+
+button {
+    all: unset;
 }
