--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -106,6 +106,7 @@
 .task-card h3 {
     font-size: 1.6em;
     overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
     font-weight: bold;
     color: #2c3e50;
@@ -123,6 +124,7 @@
 .task-card p.description {
     font-size: 1.1em;
     overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
     font-weight: 500;
     color: rgba(0, 0, 0, 0.8);
